--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-    .CollectionItem >* {
+    .CollectionItem  * {
         width: 688px;
         line-height: 200%;
         margin: 0 auto; 
@@ -11,7 +11,7 @@
         margin-top: 25px;
     }
 
-    h1, h2, h3, h4, h5, h6, p {
+    .CollectionItem  h1, h2, h3, h4, h5, h6, p {
         margin-top: 35px;
         margin-bottom: 35px;
     }
