--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
         margin-top: 25px;
     }
 
-    .CollectionItem  h1, h2, h3, h4, h5, h6, p {
+    .CollectionItem  h1, h2, h3, h4, h5, h6, p, img, video {
         margin-top: 35px;
         margin-bottom: 35px;
     }
