--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
         width: 688px;
         line-height: 200%;
         margin: 0 auto; 
+        display: block;
     }
 
     .ContentItem-time{
@@ -12,6 +13,6 @@
     }
 
     .CollectionItem  h1, h2, h3, h4, h5, h6, p, img, video {
-        margin-top: 35px;
-        margin-bottom: 35px;
+        padding-top: 35px;
+        padding-bottom: 35px;
     }
