--- a/style.css
+++ b/style.css
@@ -373,4 +373,11 @@
         border:none;
        }
 
+       .CollectionItem .ReferenceList,
+       .CollectionItem .img,
+       .CollectionItem .video {
+        display: block !important;
+       }
+
+
        
