--- a/style.css
+++ b/style.css
@@ -72,6 +72,8 @@
        }
        .CollectionItem ul {
         display:table;
+        width: 43rem;
+        margin: 2.2rem auto;
        }
        .CollectionItem ul>li {
         display:table-row;
